# petitboot--petitboot

./: .gitignore  .kateproject  .travis.yml  Makefile.am  configure.ac
discover/: Makefile.am  discover-server.c  paths.c  pb-discover.c  platform-ps3.c  platform.c  pxe-parser.c
discover/native/: native-parser.y
doc/: components.rst
doc/func/: user_interface.rst
lib/crypt/: crypt.c  crypt.h
lib/efi/: efivar.c
lib/file/: file.c
lib/log/: log.c  log.h
lib/pb-config/: pb-config.c
lib/platform/: ps3.c  ps3.h
man/: Makefile.am  pb-discover.8  pb-event.8  pb-udhcpc.8  petitboot-nc.8  petitboot.8
po/: POTFILES.in  de.po  en.po  es.po  fr.po  it.po  ja.po  ko.po  pt_BR.po  ru.po  zh_CN.po  zh_TW.po
ui/: Makefile.am
ui/common/: Makefile.am  ui-system.c
ui/ncurses/: Makefile.am  generic-main.c  main.c  nc-add-url.c  nc-auth.c  nc-auth.h  nc-boot-editor.c  nc-config.c  nc-cui.c  nc-cui.h  nc-lang.c  nc-menu.c  nc-menu.h  nc-plugin.c  nc-scr.c  nc-scr.h  nc-subset.c  nc-textscreen.c  nc-textscreen.h  platform-arm64.c  platform-powerpc.c  platform-ps3.c  platform.h  ps3-main.c
