#  This program is free software; you can redistribute it and/or modify
#  it under the terms of the GNU General Public License as published by
#  the Free Software Foundation; version 2 of the License.
#
#  This program is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#  GNU General Public License for more details.
#
#  You should have received a copy of the GNU General Public License
#  along with this program; if not, write to the Free Software
#  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
#

noinst_LTLIBRARIES += ui/common/libpbui.la

ui_common_libpbui_la_SOURCES = \
	ui/common/discover-client.c \
	ui/common/discover-client.h \
	ui/common/joystick.c \
	ui/common/joystick.h \
	ui/common/timer.c \
	ui/common/timer.h \
	ui/common/ui-system.c \
	ui/common/ui-system.h
